[package]
name = "ohyper"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
log = "0.4"
bootloader = {version = "0.9", features = ["map_physical_memory"]}
x86_64 = "0.15.1"
spin = "0.5"
bitflags = "1.3"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
x2apic = "0.4"
raw-cpuid = "10.6"
